--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script>
       $(function () {
        
-        var socket = io.connect("http://bori-chat-project1-bori-chat.a3c1.starter-us-west-1.openshiftapps.com/8080");
+        var socket = io();
         $('form').submit(function(){
           socket.emit('chat message', $('#m').val());
           $('#m').val('');
