Added link to lobby on homepage

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     </style>
   </head>
   <body>
+    <a href="lobby/lobby.html">Go to lobby</a>
     <ul id="messages"></ul>
     <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+    <input id="m" autocomplete="off" /><button>Send</button>
     </form>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+    
     <script>
       $(function () {
        
