--- a/lobby/lobby.html
+++ b/lobby/lobby.html
@@ -2,9 +2,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>DM App</title>  
+    <title>Lobby</title>
   </head>
   <body>
-   Lobby
+    Lobby
   </body>
 </html>
