--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-    <a href="lobby/lobby.html">Go to lobby</a>
+    <a href="lobby/">Go to lobby</a>
     <ul id="messages"></ul>
     <form action="">
     <input id="m" autocomplete="off" /><button>Send</button>
