Added links to index page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
           <h1><a href="/">DM<span class="logo_colour">App</span></a></h1>
-          <h2>Dool Masters online.</h2>
+          <h2>Dool Masters Online.</h2>
         </div>
       </div>
       <div id="menubar">
@@ -38,22 +38,15 @@
         <!-- insert your sidebar items here -->
         <h3>Latest News</h3>
         <h5>August 08, 2017</h5>
-        <p>The app is under development.<br /><a href="#">Read more</a></p>
+        <p>Current working team: naveed92, NitroX, TheRealGetsuga, x3r0x_x3n0n.<br /></p>
         <h5>August 07, 2017</h5>
-        <p>The app deployment was tested.<br /><a href="#">Read more</a></p>
+        <p>The app deployment was tested.<br /></p>
         <h3>Useful Links</h3>
         <ul>
-          <li><a href="#">Github Repo</a></li>
-          <li><a href="#">DM Wikia</a></li>
+          <li><a href="https://github.com/nitro-x/DMApp/" target="_blank">Github Repo</a></li>
+          <li><a href="http://duelmasters.wikia.com/wiki/Duel_Masters_Wiki" target="_blank">DM Wikia</a></li>
         
         </ul>
-        <h3>Search</h3>
-        <form method="post" action="#" id="search_form">
-          <p>
-            <input class="search" type="text" name="search_field" value="Enter keywords....." />
-            <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="style/search.png" alt="Search" title="Search" />
-          </p>
-        </form>
       </div>
       <div id="content">
         <!-- insert the page content here -->
