--- a/index.html
+++ b/index.html
@@ -1,68 +1,68 @@
 <!DOCTYPE HTML>
 <html>
 
-<head>
-  <title>DM App</title>
-  <meta name="description" content="website description" />
-  <meta name="keywords" content="website keywords, website keywords" />
-  <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
-  <link rel="stylesheet" type="text/css" href="style/style.css" />
-</head>
+    <head>
+        <title>DM App</title>
+        <meta name="description" content="website description" />
+        <meta name="keywords" content="website keywords, website keywords" />
+        <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
+        <link rel="stylesheet" type="text/css" href="style/style.css" />
+    </head>
 
-<body>
-  <div id="main">
-    <div id="header">
-      <div id="logo">
-        <div id="logo_text">
-          <!-- class="logo_colour", allows you to change the colour of the text -->
-          <h1><a href="/">DM<span class="logo_colour">App</span></a></h1>
-          <h2>Dool Masters Online.</h2>
+    <body>
+        <div id="main">
+            <div id="header">
+                <div id="logo">
+                    <div id="logo_text">
+                        <!-- class="logo_colour", allows you to change the colour of the text -->
+                        <h1><a href="/">DM<span class="logo_colour">App</span></a></h1>
+                        <h2>Dool Masters Online.</h2>
+                    </div>
+                </div>
+                <div id="menubar">
+                    <ul id="menu">
+                        <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
+                        <li class="selected"><a href="/">Home</a></li>
+                        <li><a href="lobby/">Lobby</a></li>
+                        <!--
+                        <li><a href="page.html">A Page</a></li>
+                        <li><a href="another_page.html">Another Page</a></li>
+                        <li><a href="contact.html">Contact Us</a></li> 
+                        -->
+                    </ul>
+                </div>
+            </div>
+            <div id="content_header"></div>
+            <div id="site_content">
+                <div class="sidebar">
+                    <!-- insert your sidebar items here -->
+                    <h3>Latest News</h3>
+                    <h5>August 20, 2017</h5>
+                    <p>Current working team: naveed92, NitroX, TheRealGetsuga, x3r0x_x3n0n.<br /></p>
+                    <h5>August 18, 2017</h5>
+                    <p>The app deployment was tested.<br /></p>
+                    <h3>Useful Links</h3>
+                    <ul>
+                        <li><a href="https://github.com/nitro-x/DMApp/" target="_blank">Github Repo</a></li>
+                        <li><a href="http://duelmasters.wikia.com/wiki/Duel_Masters_Wiki" target="_blank">DM Wikia</a></li>
+
+                    </ul>
+                </div>
+                <div id="content">
+                    <!-- insert the page content here -->
+                    <h1>Welcome to DM App</h1>
+                    Enter name:
+                    <form action="lobby/">
+                        <input type="text" name="user" value="Name">
+                        <input type="submit" value="Join">
+                    </form>
+                </div>
+            </div>
+            <div id="content_footer"></div>
+            <div id="footer">
+                <p><a href="/">Home</a> <!-- | <a href="examples.html">Examples</a> | <a href="page.html">A Page</a> | <a href="another_page.html">Another Page</a> | <a href="contact.html">Contact Us</a>--></p>
+                <p>Copyright &copy; shadowplay_2 | <a href="http://validator.w3.org/check?uri=referer">HTML5</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> | <a href="http://www.html5webtemplates.co.uk">design from HTML5webtemplates.co.uk</a></p>
+            </div>
         </div>
-      </div>
-      <div id="menubar">
-        <ul id="menu">
-          <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li class="selected"><a href="/">Home</a></li>
-          <!--
-          <li><a href="examples.html">Examples</a></li>
-          <li><a href="page.html">A Page</a></li>
-          <li><a href="another_page.html">Another Page</a></li>
-          <li><a href="contact.html">Contact Us</a></li> 
-          -->
-        </ul>
-      </div>
-    </div>
-    <div id="content_header"></div>
-    <div id="site_content">
-      <div class="sidebar">
-        <!-- insert your sidebar items here -->
-        <h3>Latest News</h3>
-        <h5>August 08, 2017</h5>
-        <p>Current working team: naveed92, NitroX, TheRealGetsuga, x3r0x_x3n0n.<br /></p>
-        <h5>August 07, 2017</h5>
-        <p>The app deployment was tested.<br /></p>
-        <h3>Useful Links</h3>
-        <ul>
-          <li><a href="https://github.com/nitro-x/DMApp/" target="_blank">Github Repo</a></li>
-          <li><a href="http://duelmasters.wikia.com/wiki/Duel_Masters_Wiki" target="_blank">DM Wikia</a></li>
-        
-        </ul>
-      </div>
-      <div id="content">
-        <!-- insert the page content here -->
-        <h1>Welcome to DM App</h1>
-        Enter name:
-        <form action="lobby/">
-            <input type="text" name="user" value="Name">
-            <input type="submit" value="Join">
-        </form>
-      </div>
-    </div>
-    <div id="content_footer"></div>
-    <div id="footer">
-      <p><a href="/">Home</a> <!-- | <a href="examples.html">Examples</a> | <a href="page.html">A Page</a> | <a href="another_page.html">Another Page</a> | <a href="contact.html">Contact Us</a>--></p>
-      <p>Copyright &copy; shadowplay_2 | <a href="http://validator.w3.org/check?uri=referer">HTML5</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> | <a href="http://www.html5webtemplates.co.uk">design from HTML5webtemplates.co.uk</a></p>
-    </div>
-  </div>
-</body>
+    </body>
 </html>
