CSS Applied, pages integrated

--- a/lobby/lobby.html
+++ b/lobby/lobby.html
@@ -33,11 +33,8 @@
                         <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
                         <li><a href="/">Home</a></li>               
                         <li class="selected" ><a href="#">Lobby</a></li>
-                        <!--
-                        <li><a href="page.html">A Page</a></li>
-                        <li><a href="another_page.html">Another Page</a></li>
-                        <li><a href="contact.html">Contact Us</a></li> 
-                        -->
+                        <li><a href="/decks">Decks</a></li>    
+                        <li><a href="/stats">Stats</a></li>
                     </ul>
                 </div>
             </div>
