--- a/decks/decks.html
+++ b/decks/decks.html
@@ -1,10 +1,48 @@
-
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
-  <head>
-    <title>DM App</title>  
-  </head>
-  <body>
-   Decks
-  </body>
+
+    <head>
+        <title>DM App - Decks</title>
+        <meta name="description" content="website description" />
+        <meta name="keywords" content="website keywords, website keywords" />
+        <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
+        <link rel="stylesheet" type="text/css" href="../style/style.css" />
+    </head>
+
+    <body>
+        <div id="main">
+            <div id="header">
+                <div id="logo">
+                    <div id="logo_text">
+                        <!-- class="logo_colour", allows you to change the colour of the text -->
+                        <h1><a href="/">DM<span class="logo_colour">App</span></a></h1>
+                        <h2>Dool Masters Online.</h2>
+                    </div>
+                </div>
+                <div id="menubar">
+                    <ul id="menu">
+                        <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
+                        <li ><a href="/">Home</a></li>
+                        <li><a href="/lobby">Lobby</a></li>
+                        <li class="selected"><a href="#">Decks</a></li>    
+                        <li><a href="/stats">Stats</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div id="content_header"></div>
+            <div id="site_content">
+            
+                <div id="content">
+                    <!-- insert the page content here -->
+                    <h1>Deck Builder goes here.</h1>
+                
+                </div>
+            </div>
+            <div id="content_footer"></div>
+            <div id="footer">
+                <p><a href="/">Home</a> <!-- | <a href="examples.html">Examples</a> | <a href="page.html">A Page</a> | <a href="another_page.html">Another Page</a> | <a href="contact.html">Contact Us</a>--></p>
+                <p>Copyright &copy; shadowplay_2 | <a href="http://validator.w3.org/check?uri=referer">HTML5</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> | <a href="http://www.html5webtemplates.co.uk">design from HTML5webtemplates.co.uk</a></p>
+            </div>
+        </div>
+    </body>
 </html>
