--- a/index.html
+++ b/index.html
@@ -22,13 +22,10 @@
                 <div id="menubar">
                     <ul id="menu">
                         <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-                        <li class="selected"><a href="/">Home</a></li>
-                        <li><a href="lobby/">Lobby</a></li>
-                        <!--
-                        <li><a href="page.html">A Page</a></li>
-                        <li><a href="another_page.html">Another Page</a></li>
-                        <li><a href="contact.html">Contact Us</a></li> 
-                        -->
+                        <li class="selected"><a href="#">Home</a></li>
+                        <li><a href="/lobby">Lobby</a></li>
+                        <li><a href="/decks">Decks</a></li>    
+                        <li><a href="/stats">Stats</a></li>                      
                     </ul>
                 </div>
             </div>
