--- a/lobby/lobby.html
+++ b/lobby/lobby.html
@@ -54,6 +54,8 @@
                     <form action="">
                         <input id="m" autocomplete="off" /><button>Send</button>
                     </form>
+                    <br />
+                    <a href ="duel/" target ="_blank"> Duel Room </a>
                     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
                     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 
